# python-graceful-exit

./: .envrc  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  mypy.ini  pyproject.toml  requirements-ci.txt  requirements-docker.txt  requirements.txt  setup.cfg
.github/workflows/: master.yaml  pr.yaml
src/graceful_exit/: main.py  module.py
src/graceful_exit/exeptions/: signal_exceptions.py
src/termination_guard/: module.py
src/termination_guard/modules/: __init__.py
tests/: test_guard.py  test_helpers.py
tests/mocks/: app.py
