[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=63", "wheel"]

[tool.pytest.ini_options]
addopts = "--cov graceful_exit"
testpaths = [
  "tests",
]

[tool.coverage.run]
omit = ["*/main.py", "*/**/__init__.py"]

[tool.isort]
profile = "black"

[tool.autoflake]
check = false
in-place = true
recursive = true
remove-all-unused-imports = true
remove-duplicate-keys = true

[tool.flake8]
extend-ignore = ["E203"]
max-complexity = 10
max-line-length = 88
